@@ -1,5 +1,6 @@
 This file shows the changes in this release of xPDO.
 
+- Add xPDO::call() allowing db-specific static method overrides
 - Add xPDOWinCache implementation of xPDOCache provider
 - Add workaround to drop a database for sqlsrv
 - Add workaround to trim PDO::quote() results for sqlsrv
